<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/user_item"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_doctor_image"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:elevation="4dp"
            android:src="@drawable/user"
            app:civ_border_color="@color/white"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_doctor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="14dp"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="اسم الطبيب"
            android:textColor="@color/textUser"
            android:textSize="18sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_doctor_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_doctor_specialization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="التخصص"
            android:textColor="@color/textUser"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_doctor_image"
            app:layout_constraintTop_toBottomOf="@id/item_doctor_name" />


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_doctor_image"
            app:layout_constraintTop_toBottomOf="@id/item_doctor_specialization">

            <TextView
                android:id="@+id/item_doctor_total_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:text="@string/total"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_doctor_total_salary_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:textColor="@color/red"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_doctor_total_salary"
                app:layout_constraintTop_toBottomOf="@id/item_doctor_specialization"
                tools:text="345675 ج" />
        </LinearLayout>


        <TextView
            android:id="@+id/item_doctor_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:gravity="end"
            android:singleLine="true"
            android:text="سيبتمبر 2019"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/item_doctor_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_doctor_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/user_item"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/item_doctor_circle"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="114dp"
            android:layout_height="114dp"
            android:layout_margin="10dp"
            android:progress="60"
            android:progressDrawable="@drawable/progress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_doctor_worth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="24dp"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="7648 ج" />

        <TextView
            android:id="@+id/item_doctor_worth_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:text="الاستحقاقات"
            android:textColor="@color/dark"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/item_doctor_worth"
            app:layout_constraintTop_toTopOf="@+id/item_doctor_worth" />

        <TextView
            android:id="@+id/item_doctor_cut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="14dp"
            android:drawablePadding="8dp"
            android:gravity="start"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_doctor_worth"
            tools:text="7648 ج" />

        <TextView
            android:id="@+id/item_doctor_cut_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="الاستقطاعات"
            android:textColor="@color/dark"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/item_doctor_cut"
            app:layout_constraintTop_toTopOf="@id/item_doctor_cut" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/dark"
            app:layout_constraintEnd_toEndOf="@+id/item_doctor_cut_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_doctor_cut" />

        <TextView
            android:id="@+id/item_doctor_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="14dp"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:singleLine="true"
            android:text="7648 ج"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view" />

        <TextView
            android:id="@+id/item_doctor_salary_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:text="@string/totalSalary"
            android:textColor="@color/dark"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/item_doctor_salary"
            app:layout_constraintTop_toTopOf="@id/item_doctor_salary" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/table_background"
            android:gravity="center"
            android:padding="4dp"
            android:stretchColumns="0,1,2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_doctor_salary">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight=".5"
                android:background="@drawable/corners">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@drawable/right_corner"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/number"
                    android:textAppearance="@style/customFontStyle"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_marginHorizontal="1dp"
                    android:background="@color/light_blue"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textAppearance="@style/customFontStyle"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_marginHorizontal="1dp"
                    android:background="@drawable/lift_corner"
                    android:gravity="center"
                    android:text="@string/value"
                    android:textAppearance="@style/customFontStyle"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/gray_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="1"
                    android:textAppearance="@style/customFontStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:text="مرتب اساسي"
                    android:textAppearance="@style/customFontStyle" />

                <TextView
                    android:id="@+id/salary"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:textAppearance="@style/customFontStyle"
                    tools:text="Text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@color/gray_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="@color/light_bluee"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="2"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="@color/light_bluee"
                    android:gravity="center"
                    android:text="طبيعة عمل"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/work"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="@color/light_bluee"
                    android:gravity="center"
                    android:textAppearance="@style/customFontStyle"
                    tools:text=" Text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/bottom_corners">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:layout_margin="1dp"
                    android:background="@drawable/right_bottom_corner"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="3"
                    android:textAppearance="@style/customFontStyle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:layout_margin="1dp"
                    android:background="@color/red_light"
                    android:gravity="center"
                    android:text="@string/desc"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/cut"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_column="2"
                    android:layout_margin="1dp"
                    android:background="@drawable/left_bottom_corner"
                    android:gravity="center"
                    android:textAppearance="@style/customFontStyle"
                    tools:text=" Text" />
            </TableRow>

        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
